# Parser

./: Procfile  alembic.ini  docker-compose.yaml  nixpacks.toml  pyproject.toml  pytest.ini  railway.toml  requirements.txt  start.sh  ТЗ_универсальный_парсер.docx  Техническое_решение_Универсальный_Парсер.md
alembic/: env.py
alembic/versions/: 2024_01_01_0001_initial_schema.py
deploy/docker/: Dockerfile.browser  Dockerfile.controlpanel  Dockerfile.cure  Dockerfile.uca
deploy/kubernetes/: configmap.yaml  controlpanel.yaml  namespace.yaml  rabbitmq.yaml  uca-browser.yaml  uca-http.yaml
frontend/: index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: index.ts
src/: __init__.py  config.py
src/ai_module/: __init__.py  schema_generator.py  validator.py
src/ai_module/prompts/: __init__.py  extraction.py
src/controlpanel/: __init__.py  database.py  main.py
src/controlpanel/api/: __init__.py  ai.py  schemas.py  stats.py  tasks.py
src/controlpanel/models/: __init__.py  schema.py  task.py
src/controlpanel/services/: __init__.py  schema_service.py  task_service.py
src/data_pipeline/: __init__.py  cure_parser.py  pg_loader.py
src/shared/: __init__.py  delta_client.py  rmq_client.py
src/shared/models/: __init__.py  parsing_schema.py  result_message.py  task_message.py
src/uca/: __init__.py
src/uca/browser_worker/: __init__.py  worker.py
src/uca/common/: __init__.py  extractor.py  result_builder.py  transformers.py
src/uca/http_worker/: __init__.py  worker.py
tests/: conftest.py
tests/e2e/: test_parsing_workflow.py
tests/integration/: test_api_schemas.py  test_api_tasks.py
tests/unit/: test_extractor.py  test_models.py  test_transformers.py
(+5 files in other folders)
