[project]
name = "universal-parser"
version = "1.0.0"
description = "Universal Web Parser Platform - Automated data collection from any web sources"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Universal Parser Team"}
]

dependencies = [
    # Web Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Message Queue
    "aio-pika>=9.4.0",

    # HTTP Client
    "aiohttp>=3.9.3",
    "httpx>=0.27.0",

    # Browser Automation
    "playwright>=1.41.0",

    # HTML Parsing
    "selectolax>=0.3.21",
    "lxml>=5.1.0",
    "beautifulsoup4>=4.12.3",

    # Data Processing
    "deltalake>=0.15.0",
    "pyarrow>=15.0.0",
    "polars>=0.20.0",

    # S3/MinIO
    "boto3>=1.34.0",
    "minio>=7.2.0",

    # AI Integration
    "anthropic>=0.18.0",
    "openai>=1.12.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "croniter>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

spark = [
    "pyspark>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
